Padding right to prevent tabs to overlap with Intercom button

--- a/assets/css/components/Tabs.scss
+++ b/assets/css/components/Tabs.scss
@@ -9,6 +9,7 @@
   color: $brand-text--dark;
   padding-bottom: .5rem;
   padding-left: 1.5rem;
+  padding-right: 9rem;
 
   // list of tabs
   &>ul {
